Bug 247463 - [GTK] gsk_renderer_render_texture: assertion 'GSK_IS_RENDER_NODE (root)' failed in webkitWebViewBaseTakeViewSnapshot
Summary: [GTK] gsk_renderer_render_texture: assertion 'GSK_IS_RENDER_NODE (root)' fail...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: PC Linux
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
: 238343 246459 (view as bug list)
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2022-11-03 16:07 PDT by Michael Catanzaro
Modified: 2022-12-02 00:18 PST (History)
2 users (show)

See Also:


Attachments
Full backtrace (19.28 KB, text/plain)
2022-11-03 16:25 PDT, Michael Catanzaro
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2022-11-03 16:07:57 PDT
This crash (with G_DEBUG=fatal-criticals) occurs roughly half the time when starting GTK 4 Epiphany. Looks real similar to bug #238343, but it's not the same.

#0  _g_log_abort (breakpoint=1) at ../../../../Projects/glib/glib/gmessages.c:566
#1  0x00007fddf0f63246 in g_logv (log_domain=0x7fddf09cb624 "Gsk", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7fddf0fd132f "%s: assertion '%s' failed", args=0x7fff0437b778)
    at ../../../../Projects/glib/glib/gmessages.c:1429
#2  0x00007fddf0f6333a in g_log (log_domain=0x7fddf09cb624 "Gsk", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7fddf0fd132f "%s: assertion '%s' failed") at ../../../../Projects/glib/glib/gmessages.c:1471
#3  0x00007fddf0f653ae in g_return_if_fail_warning (log_domain=0x7fddf09cb624 "Gsk", 
    pretty_function=0x7fddf0a07bd0 <__func__.7.lto_priv.188> "gsk_renderer_render_texture", 
    expression=0x7fddf0a06698 "GSK_IS_RENDER_NODE (root)") at ../../../../Projects/glib/glib/gmessages.c:2959
#4  0x00007fddf092679c in gsk_renderer_render_texture (renderer=<optimized out>, root=0x0, viewport=0x7fff0437b8f0)
    at ../gsk/gskrenderer.c:370
#5  0x00007fdded59f878 in webkitWebViewBaseTakeViewSnapshot (webkitWebViewBase=<optimized out>, clipRect=...)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:2679
#6  0x00007fdded4d90c8 in WebKit::PageClientImpl::takeViewSnapshot (clipRect=..., this=0x7fddde017980)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/API/gtk/PageClientImpl.cpp:339
#7  WebKit::WebPageProxy::takeViewSnapshot (this=<optimized out>, clipRect=...)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/WebPageProxy.cpp:9556
#8  0x00007fdded4e49f2 in WebKit::ViewSnapshotStore::recordSnapshot (item=..., webPageProxy=..., 
    this=<optimized out>)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/ViewSnapshotStore.cpp:92
#9  WebKit::WebPageProxy::recordNavigationSnapshot (item=..., this=0x7fdddc040000)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/WebPageProxy.cpp:1834
#10 WebKit::WebPageProxy::recordNavigationSnapshot (item=..., this=0x7fdddc040000)
    at /usr/src/debug/webkitgtk-2.38.0-3.fc37.x86_64/Source/WebKit/UIProcess/WebPageProxy.cpp:1828

Will attach a full backtrace.
Comment 1 Michael Catanzaro 2022-11-03 16:25:24 PDT
Created attachment 463393 [details]
Full backtrace
Comment 2 Michael Catanzaro 2022-12-01 11:26:57 PST
Pull request: https://github.com/WebKit/WebKit/pull/7037
Comment 3 Michael Catanzaro 2022-12-01 14:18:14 PST
*** Bug 238343 has been marked as a duplicate of this bug. ***
Comment 4 Michael Catanzaro 2022-12-01 14:18:23 PST
*** Bug 246459 has been marked as a duplicate of this bug. ***
Comment 5 EWS 2022-12-02 00:18:17 PST
Committed 257276@main (fd0db7c03a48): <https://commits.webkit.org/257276@main>

Reviewed commits have been landed. Closing PR #7037 and removing active labels.