[GTK] gsk_renderer_render_texture: assertion 'GSK_IS_RENDER_NODE (root)' failed in webkitWebViewBaseTakeViewSnapshot https://bugs.webkit.org/show_bug.cgi?id=247463

Reviewed by Carlos Garcia Campos.

I don't know how to reproduce this crash, but it happens a lot and the
solution is clear enough. When the snapshot is empty, then the
GskRenderNode is nullptr, and we should immediately return nullptr
instead of trying to use it as a valid GskRenderNode. The return value
here is already nullable, so there's nothing more to worry about.

I'm not certain why this happens, but I think it might be associated
with web process hangs. Doesn't matter: the UI process should be robust
regardless.

Thanks to Benjamin Otte for helping with my questions regarding this
issue.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTakeViewSnapshot):

Canonical link: https://commits.webkit.org/257276@main