Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp
@@ -2716,6 +2716,8 @@ RefPtr<WebKit::ViewSnapshot> webkitWebViewBaseTakeViewSnapshot(WebKitWebViewBase
         gtk_snapshot_pop(snapshot.get());
 
     GRefPtr<GskRenderNode> renderNode = adoptGRef(gtk_snapshot_to_node(snapshot.get()));
+    if (!renderNode)
+        return nullptr;
 
     graphene_rect_t viewport = { 0, 0, static_cast<float>(size.width()), static_cast<float>(size.height()) };
     GdkTexture* texture = gsk_renderer_render_texture(renderer, renderNode.get(), &viewport);
